--- a/RealEstateApp/app/views/apartments/index.html.erb
+++ b/RealEstateApp/app/views/apartments/index.html.erb
@@ -1,1 +1,7 @@
 <h1>index-apartments</h1>
+
+<% @apartments.each do |apartment| %>
+<h2><%= apartment.title %></h2>
+<%end%>
+
+<%= link_to 'Add apartment', new_apartment_path%>
