--- a/RealEstateApp/app/views/layouts/application.html.erb
+++ b/RealEstateApp/app/views/layouts/application.html.erb
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    
     <title>RealEstateApp</title>
+   
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    
   </head>
 
   <body>
-
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-
+      <%= render "layouts/nav" %>
+        <p class="notice"><%= notice %></p>
+        <p class="alert"><%= alert %></p>
+      <%= render "layouts/footer"%>
+      
     <%= yield %>
   </body>
 </html>
