--- a/RealEstateApp/app/views/layouts/_nav.html.erb
+++ b/RealEstateApp/app/views/layouts/_nav.html.erb
@@ -1,24 +1,24 @@
 <nav class="navbar navbar-default">
         <nav class="navbar navbar-expand-lg navbar-light bg-faded fixed-top">
-                <div class="container">
-              
-                  <%= link_to "Properties", root_path, class: "navbar-brand" %>
-                  <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button> -->
+                <div class="container">     
                   <div class="collapse navbar-collapse" id="navbarResponsive">
-                        
-                            <%= link_to "Sign up", new_user_registration_path, class: "navbar-brand" %>
-                    <!-- <ul class="navbar-nav ml-auto">
-                      <li class="nav-item"> -->
-                            <% if current_user %>
-                                <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-                            <% else %>
-                                <%= link_to "Log in", user_session, method: :delete %>
-                            <% end %>
-
-                </nav>
-        </nav>
+                      <%= link_to "Properties", root_path, class: "navbar-brand" %>
+                   
+                      <% if current_user %>
+                            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "navbar-brand" %>
+                      <% else %>
+                            <%= link_to "Sign up", new_user_registration_path, class: "navbar-brand" %>                            
+                            <%= link_to "Log in", user_session_path, method: :post, class: "navbar-brand" %>
+                      <% end %>
+                  </div>
+                  <div class="collapse navbar-collapse" id="navbarResponsive" >
+                    <% if current_user  %>
+                      <%= link_to 'Add apartment', new_apartment_path, class: "navbar-brand" %>
+                    <% else %>
+                      
+                    <% end %>                  
+                 </div> 
+              </div>  
+            
         </nav>
 </nav>
