fix controller and form

--- a/RealEstateApp/app/views/partials/_apartment_form.html.erb
+++ b/RealEstateApp/app/views/partials/_apartment_form.html.erb
@@ -30,8 +30,8 @@
                     <%= f.text_field :price%>
             </div>
             <div>
-                <%= f.label :landlord_id%>
-                    <%= f.text_field :landlord_id%>
+                <%= f.label :Landlord%>
+                    <%= f.text_field :user_id%>
             </div>
                 <%= f.submit %>
         </form>
