--- a/RealEstateApp/app/views/apartments/show.html.erb
+++ b/RealEstateApp/app/views/apartments/show.html.erb
@@ -1,5 +1,6 @@
 <div><%= @apartment.title %></div>
 <div><%= @apartment.address %></div>
+<div><%= @apartment.neighborhood %></div>
 <div><%= @apartment.bedrooms %></div>
 <div><%= @apartment.bathrooms %></div>
 <div><%= @apartment.description %></div>
@@ -7,7 +8,7 @@
 
 <% if current_user %>
     <%= link_to 'edit apartment', edit_apartment_path(@apartment)%>
-    <%= button_to 'X',apartment_path(@apartment),method: :delete%>
+    <%= button_to 'Delete',apartment_path(@apartment),method: :delete%>
     <%= link_to 'All apartment', root_path%>
 <% else %>
     <%= link_to 'All apartment', root_path%>
