--- a/RealEstateApp/app/views/partials/_apartment_form.html.erb
+++ b/RealEstateApp/app/views/partials/_apartment_form.html.erb
@@ -14,6 +14,10 @@
                     <%= f.text_field :address%>
             </div>
             <div>
+                    <%= f.label :neighborhood%>
+                        <%= f.text_field :neighborhood%>
+                </div>
+            <div>
                 <%= f.label :bedrooms%>
                     <%= f.text_field :bedrooms%>
             </div>
