add displaying the result of the search in search results

--- a/RealEstateApp/app/views/apartments/search_results.html.erb
+++ b/RealEstateApp/app/views/apartments/search_results.html.erb
@@ -1,19 +1,14 @@
 <p>Search Results for '<%= params[:search]%>'</p>
 
-<!-- <%= render partial: 'apartments/apartment'
-collection: @found_apartmentss%> -->
+<% @apartments.each do |apartment| %>
 
-<!-- <% @apartments.each do |apartment| %>
-    
-    <h2><%= link_to apartment.title, apartment_path(apartment, @found_apartments) %></h2>
-
-<%end%> -->
-<% if apartment.title == params[:search] %>
-    <% @apartments.each do |apartment| %>
-    
-    <h2><%= link_to apartment.title, apartment_path(apartment, @found_apartments) %></h2> 
-<%end%>
+<% if apartment.title == @found_apartments %>
+     <%=  @found_apartments.each do |found_apartment| %> 
+     <%= found_apartment.title %>
+    <% end %>
 <% else %>
     <p> No results found </p>
-   
-<%end%>
+    <h2><%= link_to apartment.title, apartment_path(apartment, @found_apartments) %></h2>    
+ <%end%>
+<%end %>
+
