--- a/RealEstateApp/app/views/apartments/index.html.erb
+++ b/RealEstateApp/app/views/apartments/index.html.erb
@@ -12,6 +12,9 @@
 
 
 <% @apartments.each do |apartment| %>
-    <h2><%= link_to apartment.title, apartment_path(apartment) %></h2>
+   <a href="/apartments/<%= apartment.id %>" >
+    <%= image_tag apartment.apartment_img.url(:apartment_index),class: 'ap_pic' %>
+  
+    <h2><%= apartment.title %></h2>  
 <%end%>
 
