--- a/RealEstateApp/app/assets/stylesheets/application.scss
+++ b/RealEstateApp/app/assets/stylesheets/application.scss
@@ -10,13 +10,22 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
  @import "bootstrap-sprockets";
  @import "bootstrap";
 
- .ap_pic {
-     width: 200px;
-     height: 300px;
- }
+ul {
+    list-style-type: none;
+  }
+#header1{
+    background-image: url("../img/main.jpeg");
+}
+.pictures{
+    width: 100%;
+    height: 300px;
+    display: flex;
+ 
+}
+.search{
+    flex-direction: column;
+}
