--- a/RealEstateApp/app/views/layouts/_nav.html.erb
+++ b/RealEstateApp/app/views/layouts/_nav.html.erb
@@ -1,24 +1,40 @@
-<nav class="navbar navbar-default">
-        <nav class="navbar navbar-expand-lg navbar-light bg-faded fixed-top">
-                <div class="container">     
-                  <div class="collapse navbar-collapse" id="navbarResponsive">
-                      <%= link_to "Properties", root_path, class: "navbar-brand" %>
-                   
-                      <% if current_user %>
-                            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "navbar-brand" %>
-                      <% else %>
-                            <%= link_to "Sign up", new_user_registration_path, class: "navbar-brand" %>                            
-                            <%= link_to "Log in", user_session_path, method: :post, class: "navbar-brand" %>
-                      <% end %>
-                  </div>
-                  <div class="collapse navbar-collapse" id="navbarResponsive" >
-                    <% if current_user  %>
-                      <%= link_to 'Add apartment', new_apartment_path, class: "navbar-brand" %>
-                    <% else %>
-                      
-                    <% end %>                  
-                 </div> 
-              </div>  
-            
-        </nav>
-</nav>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Catherine Federer Real Estate</a>
+     
+        <i class="fa fa-bars"></i>
+      <!-- </button> -->
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a href="#services">
+            <%= link_to "Home", root_path,class:"navbar-brand" %></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#portfolio">
+            <% if current_user %>
+            <%= link_to 'Add apartment', new_apartment_path, class: "navbar-brand"%>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete,class: "navbar-brand"%>
+          <% else %>
+              <%= link_to "Sign up", new_user_registration_path, class: "navbar-brand"%>                            
+              <%= link_to "Log in", user_session_path, method: :post, class: "navbar-brand"%>
+          <% end %></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#about">About us</a>
+            <!-- <%= link_to "About us", new_user_registration_path, class: "navbar-brand"%>                             -->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#team">About the area</a>
+            <!-- <%= link_to "About th area", new_user_registration_path, class: "navbar-brand"%>                                           -->
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <!-- <%= link_to "Contact", new_user_registration_path, class: "navbar-brand"%>                                           -->
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
