add updates to About Staff section

--- a/RealEstateApp/app/assets/stylesheets/application.scss
+++ b/RealEstateApp/app/assets/stylesheets/application.scss
@@ -28,4 +28,13 @@ ul {
 }
 .search{
     flex-direction: column;
+    margin: 0 0 10px 510px;
+}
+.rounded-circle {
+    font: 20px;
+    color: black;
+    padding-top: 50px;
+}
+.row{
+    margin-top: 20px;
 }
