--- a/RealEstateApp/app/views/apartments/index.html.erb
+++ b/RealEstateApp/app/views/apartments/index.html.erb
@@ -104,12 +104,10 @@
     <% end %>
 </div>
 
-    <div>
+    <div class="container col-md-4 col-sm-6">
       <% @apartments.each do |apartment|  %>
         <a href="/apartments/<%= apartment.id %>" >
           <%= image_tag apartment.apartment_img.url(:apartment_index) %>
-          
-          
           <h2><%= apartment.title %></h2>  
       <%end%>
    </div>
@@ -218,7 +216,7 @@
            <div class="row">
              <div class="col-lg-12 text-center">
                <h2 class="section-heading">About us</h2>
-               <h3 class="section-subheading text-muted"></h3>
+               <h3 class="section-subheading text-muted">We are small team working in NYC</h3>
              </div>
            </div>
            <div class="row">
@@ -226,7 +224,7 @@
                <ul class="timeline">
                  <li>
                    <div class="timeline-image">
-                     <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                     <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt=" Almost 30 years in Astoria">
                    </div>
                    <div class="timeline-panel">
                      <div class="timeline-heading">
@@ -234,27 +232,27 @@
                        <h4 class="subheading">Our Humble Beginnings</h4>
                      </div>
                      <div class="timeline-body">
-                       <p class="text-muted">Our humble begins starts a long time ago.</p>
+                       <p class="text-muted"></p>
                      </div>
                    </div>
                  </li>
                  <li class="timeline-inverted">
                    <div class="timeline-image">
-                     <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                     <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="Started with only 2 people">
                    </div>
                    <div class="timeline-panel">
                      <div class="timeline-heading">
                        <h4>December 1998</h4>
-                       <h4 class="subheading">An Agency is Born</h4>
+                       <h4 class="subheading">Our Agency is Born</h4>
                      </div>
                      <div class="timeline-body">
-                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                       <p class="text-muted">located in the heart of Astoria, within a small office, and only a couple listing available.</p>
                      </div>
                    </div>
                  </li>
                  <li>
                    <div class="timeline-image">
-                     <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                     <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="The family is growing, as well our clients">
                    </div>
                    <div class="timeline-panel">
                      <div class="timeline-heading">
@@ -262,13 +260,13 @@
                        <h4 class="subheading">We move to our own office/h4>
                      </div>
                      <div class="timeline-body">
-                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                       <p class="text-muted">Moved to a new bigger office </p>
                      </div>
                    </div>
                  </li>
                  <li class="timeline-inverted">
                    <div class="timeline-image">
-                     <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                     <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="Build up a strong relationships with Landlords">
                    </div>
                    <!-- <div class="timeline-panel">
                      <div class="timeline-heading">
@@ -276,9 +274,9 @@
                        <h4 class="subheading">Phase Two Expansion</h4>
                      </div>
                      <div class="timeline-body">
-                       <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                       <p class="text-muted"></p>
                      </div>
-                   </div> -->
+                   </div> 
                  </li>
                  <li class="timeline-inverted">
                    <div class="timeline-image">
@@ -306,8 +304,8 @@
              <div class="col-sm-4">
                <div class="team-member">
                  <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-                 <h4>Kay Garland</h4>
-                 <p class="text-muted">Lead Designer</p>
+                 <h4>Catherine Federer</h4>
+                 <p class="text-muted">Real Estate Broker</p>
                  <ul class="list-inline social-buttons">
                    <li class="list-inline-item">
                      <a href="#">
@@ -330,8 +328,8 @@
              <div class="col-sm-4">
                <div class="team-member">
                  <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-                 <h4>Larry Parker</h4>
-                 <p class="text-muted">Lead Marketer</p>
+                 <h4>Celine Marie</h4>
+                 <p class="text-muted">office-asistent</p>
                  <ul class="list-inline social-buttons">
                    <li class="list-inline-item">
                      <a href="#">
@@ -378,7 +376,7 @@
            </div>
            <div class="row">
              <div class="col-lg-8 mx-auto text-center">
-               <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+               <p class="large text-muted"></p>
              </div>
            </div>
          </div>
