--- a/RealEstateApp/app/views/partials/_apartment_form.html.erb
+++ b/RealEstateApp/app/views/partials/_apartment_form.html.erb
@@ -1,35 +1,35 @@
 <div>
     <%= form_for @apartment do |f| %>
-        <form>
-            <div>
-                <%= f.label :image %>
+        <form class="form-horizontal">
+            <div class="form-group">
+                <%= f.label :image  %>
                     <%=f.file_field :apartment_img%>                 
             </div>
-            <div>
-                <%= f.label :title%>
+            <div class="form-group">
+                <%= f.label :title %>
                     <%= f.text_field :title %>
             </div>
-            <div>
+            <div class="form-group">
                 <%= f.label :address%>
                     <%= f.text_field :address%>
             </div>
-            <div>
+            <div class="form-group">
                     <%= f.label :neighborhood%>
                         <%= f.text_field :neighborhood%>
              </div>
-            <div>
+            <div class="form-group">
                 <%= f.label :bedrooms%>
                     <%= f.text_field :bedrooms%>
             </div>
-            <div>
+            <div class="form-group">
                 <%= f.label :bathrooms%>
                     <%= f.text_field :bathrooms%>
             </div>
-            <div>
+            <div class="form-group">
                 <%= f.label :description%>
                     <%= f.text_field :description%>
             </div>
-            <div>
+            <div class="form-group">
                 <%= f.label :price%>
                     <%= f.text_field :price%>
             </div>
